Remove props=javadoc
Avoid new page directive from JavaDoc plugin.

--- a/test/generics/topic.dita
+++ b/test/generics/topic.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
-<topic props="javadoc" id="org.casbin.jcasbin.model.Policy" outputclass="class">
+<topic id="org.casbin.jcasbin.model.Policy" outputclass="class">
   <title>Class Policy</title>
   <titlealts>
     <navtitle>Policy</navtitle>
